--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
                 </div>
                 <nav class="nav">
                     <ul class="nav-menu">
-                        <li class="nav-item dropdown-item active">
+                        <li class="nav-item dropdown-item">
                             <a class="nav-link dropdown-link" href="#">Lorem Ipsum <span class="icon material-icons-outlined">expand_more</span></a>
-                            <ul class="dropdown-menu show">
+                            <ul class="dropdown-menu">
                                 <li class="nav-item"><a class="nav-link" href="#">Menu 1</a></li>
                                 <li class="nav-item"><a class="nav-link" href="#">Menu 2</a></li>
                                 <li class="nav-item"><a class="nav-link" href="#">Menu 3</a></li>
