--- a/game.html
+++ b/game.html
@@ -164,7 +164,7 @@
                             </ul>
                         </div>
                         <div class="right-block">
-                            <div class="page-title">Доп. функции слота</div>
+                            <div class="page-title"><span class="icon"><img src="./assets/img/cherry-01.svg" alt=""></span> Доп. функции слота</div>
                             <ul class="feats-list">
                                 <li>Фриспины</li>
                                 <li>Символ Wild</li>
