--- a/game.html
+++ b/game.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Sharp" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Two+Tone" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./assets/css/fonts.css">
     <link rel="stylesheet" href="./assets/css/main.css">
     <title>Start Template</title>
@@ -151,6 +152,7 @@
                                     </li>
                                 </ul>
                             </div>
+                            <a class="review-link" href="#">Посмотреть отзывы</a>
                         </div>
                     </div>
                     <div class="info-wrap">
@@ -270,7 +272,109 @@
             </section>
         </div>
         <div class="game-review">
-            
+            <div class="container review">
+                <div class="page-title">Последние отзывы на Игру</div>
+                <div class="row swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="col">
+                            <div class="user-info">
+                                <div class="img-block">
+                                    <img src="./assets/img/avatar.png" alt="">
+                                </div>
+                                <div class="wrapper">
+                                    <p class="username">Username <span class="badge">Новичок</span></p>
+                                    <span class="date">01.07.2016</span>
+                                </div>
+                            </div>
+                            <div class="wrap">
+                                <p class="review-text">Этот гаминатор я пробовал в реальном казино где их очень часто ставят. новоматик легендарная компания и ее слоты актуальные через много лет после выпуска. до сих пор ставлю деньги на леди шарм. но лучше делать это не в российских онлайн-казино, в них новоматик практически везде скриптованный. давно заметил, что у европейских операторов автомат дает в 2-3 раза больше.</p>
+                                <div class="rate-wrap">
+                                    <p>Общая оценка</p>
+                                    <div class="star-ratings-css">
+                                        <div class="star-ratings-css-top"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
+                                        <div class="star-ratings-css-bottom"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
+                                    </div>
+                                    <span class="rate">4/5</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="col">
+                            <div class="user-info">
+                                <div class="img-block">
+                                    <img src="./assets/img/avatar.png" alt="">
+                                </div>
+                                <div class="wrapper">
+                                    <p class="username">Username <span class="badge">Новичок</span></p>
+                                    <span class="date">01.07.2016</span>
+                                </div>
+                            </div>
+                            <div class="wrap">
+                                <p class="review-text">Этот гаминатор я пробовал в реальном казино где их очень часто ставят. новоматик легендарная компания и ее слоты актуальные через много лет после выпуска. до сих пор ставлю деньги на леди шарм. но лучше делать это не в российских онлайн-казино, в них новоматик практически везде скриптованный. давно заметил, что у европейских операторов автомат дает в 2-3 раза больше.</p>
+                                <div class="rate-wrap">
+                                    <p>Общая оценка</p>
+                                    <div class="star-ratings-css">
+                                        <div class="star-ratings-css-top"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
+                                        <div class="star-ratings-css-bottom"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
+                                    </div>
+                                    <span class="rate">4/5</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="col">
+                            <div class="user-info">
+                                <div class="img-block">
+                                    <img src="./assets/img/avatar.png" alt="">
+                                </div>
+                                <div class="wrapper">
+                                    <p class="username">Username <span class="badge">Новичок</span></p>
+                                    <span class="date">01.07.2016</span>
+                                </div>
+                            </div>
+                            <div class="wrap">
+                                <p class="review-text">Этот гаминатор я пробовал в реальном казино где их очень часто ставят. новоматик легендарная компания и ее слоты актуальные через много лет после выпуска. до сих пор ставлю деньги на леди шарм. но лучше делать это не в российских онлайн-казино, в них новоматик практически везде скриптованный. давно заметил, что у европейских операторов автомат дает в 2-3 раза больше.</p>
+                                <div class="rate-wrap">
+                                    <p>Общая оценка</p>
+                                    <div class="star-ratings-css">
+                                        <div class="star-ratings-css-top"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
+                                        <div class="star-ratings-css-bottom"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
+                                    </div>
+                                    <span class="rate">4/5</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="col">
+                            <div class="user-info">
+                                <div class="img-block">
+                                    <img src="./assets/img/avatar.png" alt="">
+                                </div>
+                                <div class="wrapper">
+                                    <p class="username">Username <span class="badge">Новичок</span></p>
+                                    <span class="date">01.07.2016</span>
+                                </div>
+                            </div>
+                            <div class="wrap">
+                                <p class="review-text">Этот гаминатор я пробовал в реальном казино где их очень часто ставят. новоматик легендарная компания и ее слоты актуальные через много лет после выпуска. до сих пор ставлю деньги на леди шарм. но лучше делать это не в российских онлайн-казино, в них новоматик практически везде скриптованный. давно заметил, что у европейских операторов автомат дает в 2-3 раза больше.</p>
+                                <div class="rate-wrap">
+                                    <p>Общая оценка</p>
+                                    <div class="star-ratings-css">
+                                        <div class="star-ratings-css-top"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
+                                        <div class="star-ratings-css-bottom"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
+                                    </div>
+                                    <span class="rate">4/5</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            </div>
         </div>
         <div class="popularity-games">
             <div class="container">
@@ -435,6 +539,8 @@
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/slider.js"></script>
 </body>
 </html>
