--- a/game.html
+++ b/game.html
@@ -274,7 +274,7 @@
         <div class="game-review">
             <div class="container review">
                 <div class="page-title">Последние отзывы на Игру</div>
-                <div class="row swiper-wrapper">
+                <!-- <div class="row swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="col">
                             <div class="user-info">
@@ -372,8 +372,11 @@
                         </div>
                     </div>
                 </div>
+                <div class="swiper-pagination"></div>
                 <div class="swiper-button-prev"></div>
-                <div class="swiper-button-next"></div>
+                <div class="swiper-button-next"></div> -->
+                <p class="no-review">Отзывов пока нет. Помогите другим пользователям с выбором - будьте первым, кто поделится своим мнением о данном обзоре</p>
+                <a class="set-review" href="#">Оставить отзыв</a>
             </div>
         </div>
         <div class="popularity-games">
