--- a/game.html
+++ b/game.html
@@ -58,7 +58,10 @@
             <div class="container">
                 <span class="search-icon"><i class="fas fa-search"></i></span>
                 <input class="search-input" type="text" name="search" placeholder="Поиск по сайту">
-                <a class="telegram" href="#"><span class="icon"><i class="fab fa-telegram-plane"></i></span></a>
+                <div class="icons">
+                    <a class="telegram" href="#"><span class="icon"><i class="fab fa-telegram-plane"></i></span></a>
+                    <a class="gift-link" href="#"><img src="./assets/img/gift-01.svg" alt=""></a>
+                </div>
             </div>
         </div>
     </header>
